-Добавил RecyclerView в активити меню поиска -Добавил holder для треков -Добавил adapter для треков -Доработал SearchActivity -Добавил верстку ячейки для RecyclerView -Добавил файл с временными mock данными

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
     <string name="error_not_app_link">Нет приложения для открытия ссылки</string>
     <string name="error_not_app_email">Нет приложения для отправки e-mail</string>
+    <string name="search_track_dot"> • </string>
 </resources>
