--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,9 @@
     <string name="genre">Жанр</string>
     <string name="country">Страна</string>
     <string name="durationTrack">0:00</string>
+    <string name="media_library_empty">Ваша медиатека пуста</string>
+    <string name="media_library_no_playlist">Вы не создали\nни одного плейлиста</string>
+    <string name="new_playlist">Новый плейлист</string>
+    <string name="favorite_tracks">Избранные треки</string>
+    <string name="playlists">Плейлисты</string>
 </resources>
